--- a/lesson-7-html-css/style1.css
+++ b/lesson-7-html-css/style1.css
@@ -4,9 +4,10 @@ h1 {
     color: orange;
 }
 
-p:first-letter {
+p::first-letter {
     font-size: 30px;
     color: red;
+    font-weight: bold;
 }
 
 em {
@@ -16,11 +17,11 @@ em {
 
 h2 {
     font-size: 30px;
-    color: orange;
+    color: blue;
 }
 
-h2[title] {
-    color: blue;
+h2:first-of-type{
+    color: orange;
 }
 
 span {
@@ -31,16 +32,17 @@ ol > li {
     color: red;
 }
 
-ol[title="gray"] > li {
+ul:first-of-type li:first-child li {
     color: gray;
 }
 
-ol[title="green"] > li {
+ul:last-of-type li:first-child li {
     color: green;
 }
 
 table {
     border: 1px solid black;
+    text-align: center;
 }
 
 td {
@@ -49,14 +51,12 @@ td {
     background-color: white;
 }
 
-td[title="name"] {
+tr:nth-child(n+3) td:first-child {
     color: orange;
-    background-color: white;
 }
 
-td[title=green] {
+tr:nth-child(n+3) td:nth-child(n+2) {
     background-color: green;
     color: white;
 }
-
 
