create page for task2

--- a/lesson-12-backgrounds/starter-host-test-project/packages/packages.css
+++ b/lesson-12-backgrounds/starter-host-test-project/packages/packages.css
@@ -1,3 +1,7 @@
+main {
+    height: 50vw;
+}
+
 body {
     background: url("../images/plans-background.jpg") no-repeat ;
     background-size: 100%;
