--- a/lesson-12-backgrounds/starter-host-test-project/customers/customers.css
+++ b/lesson-12-backgrounds/starter-host-test-project/customers/customers.css
@@ -6,7 +6,7 @@ main {
     margin-top: 64px;
 }
 
-.half-page-left {
+.half-page-image {
     width: 70%;
     background: url("../images/customer-1.jpg") no-repeat;
     background-size: 100%;
@@ -16,7 +16,7 @@ main {
     margin: 30px 0;
 }
 
-.half-page-right {
+.half-page-info {
     float: right;
     width: 30%;
     height: 46vw;
@@ -24,12 +24,12 @@ main {
     overflow: hidden;
 }
 
-.half-page-bottom .half-page-right {
+.half-page-bottom .half-page-info {
     float: left;
     width: 30%;
 }
 
-.half-page-bottom .half-page-left {
+.half-page-bottom .half-page-image {
     width: 70%;
     background: url("../images/customer-2.jpg") no-repeat;
     background-size: 100%;
